# Great

./: .gitignore  .pre-commit-config.yaml  Gruntfile.js  MANIFEST.in  README.rst  add_artists.py  alembic.ini  bower.json  create_db.py  development.conf.py  hatch_build.py  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  version.txt  wsgi.py
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 13747a4fb942_initial_revision.py  24927d9fc648_add_spotify_uris.py  2c5fab9f0068_add_tracked.py  44359856d0a6_initial_revision.py  52a36be1464c_add_pinned_to_media.py  7676edb6e5a4_yeah_wat_spotify.py  b9aa6cdacc5_test_revision.py
automanual/: add_artists.py  add_spotify_uris.py  requirements.txt  spotify_token.py
examples/sample-data/: README.md  great.toml
examples/sample-data/comparisons/: favorites.jsonl  movies.jsonl
examples/sample-data/items/: movie.toml  tv.toml
examples/sample-data/log/: 2026.jsonl
examples/sample-data/want/: tv.toml
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  webpack.config.js
frontend/src/: App.vue  great.js
frontend/src/components/: ArtistSearch.vue  Library.vue  Navbar.vue  Radar.vue  Tracked.vue
frontend/src/router/: index.js
great/: __init__.py  __main__.py  _cli.py  _version.py  albumsgenerator.py  antennapod.py  app.py  cli.py  config.py  extract.py  lookup.py  models.py  musicbrainz.py  players.py  ranking.py  render.py  resources.py  session.py  spotify.py  store.py  tap.py  tui.py  views.py  web.py
great/_data/: pages_workflow.yml  pages_workflow.yml.template
great/alembic/: config.ini
great/alembic/versions/: 44359856d0a6_initial_revision.py
great/assets/: style.css
great/models/: _guid.py  core.py  music.py
great/schemas/: artist.json
great/static/: index.html
great/static/js/: app.js
great/static/js/models/: artist.js
great/static/js/views/: artists.js
great/templates/: ArtistView.html  ArtistsListView.html  ArtistsView.html  _macros.html  base.html  base.j2  diary.html  footer.j2  index.html  index.j2  item.html  list.html  navigation.j2  queue.html  tracks.j2
great/tests/: conftest.py  test_albumsgenerator.py  test_antennapod.py  test_cli.py  test_log_want.py  test_models.py  test_players.py  test_ranking.py  test_render.py  test_session.py  test_spotify.py  test_startup.py  test_store.py  test_tui.py
great/tests/integration/: test_music.py
great/views/: core.py  music.py
tools/: dev-requirements.txt  requirements.txt
twisted/plugins/: great.py
