[metadata]
name = great
url = https://github.com/Julian/Great
description = "A ratings aggregator"
long_description = file: README.rst
author = Julian Berman
author_email = Julian+Great@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    Alchimia
    alembic
    appdirs
    attrs
    click
    filesystems
    hyperlink
    Minion
    pytoml
    SQLAlchemy
    Twisted
    txmusicbrainz

[options.entry_points]
console_scripts =
    great = great._cli:main

[flake8]
exclude = great/__init__.py
